--- a/build.gradle
+++ b/build.gradle
@@ -47,14 +47,18 @@ dependencies {
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+
 
 //    testImplementation 'org.springframework.amqp:spring-rabbit-test'
 //    testImplementation 'org.springframework.batch:spring-batch-test'
 //    testImplementation 'org.springframework.kafka:spring-kafka-test'
 
 
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    testImplementation 'org.springframework.security:spring-security-test'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('bootBuildImage') {
