--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,53 @@ dependencies {
     // 테스트코드에서 로깅하기 위함
     testCompileOnly 'org.projectlombok:lombok'
     testAnnotationProcessor 'org.projectlombok:lombok'
+
+
+
+    // 엔티티가 수정될 때도 compile 을 해주어야함 (우측 Gradle -> Tasks -> other -> compileJava(클릭))
+    // QueryDSL JPA
+    implementation 'com.querydsl:querydsl-jpa'
+    // QFile 생성 및 가져오기
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 }
+
+
+// Qfile이 build 폴더 아래 생겨 import에 문제가 생길때를 위함
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java', buildDir.toString() + '/generated/sources/annotationProcessor/java/main']
+        }
+    }
+}
+
+
+
+
+def querydslSrcDir = 'src/main/generated'
+sourceSets {
+    main {
+        java {
+            srcDirs += [ querydslSrcDir ]
+        }
+    }
+}
+
+compileJava {
+    options.compilerArgs << '-Aquerydsl.generatedAnnotationClass=javax.annotation.Generated'
+}
+
+clean {
+    // clean 실행 시 생성된 QClass 삭제
+    delete file(querydslSrcDir)
+}
+
+tasks.withType(JavaCompile) {
+    options.generatedSourceOutputDirectory = file(querydslSrcDir)
+}
+
 
 tasks.named('bootBuildImage') {
     builder = 'paketobuildpacks/builder-jammy-base:latest'
